--- a/Información.html
+++ b/Información.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device=width, initial-scale=1.0">
-    <title>Sustenta Tienda</title>
-    <meta name="description" content="Marca de cosmética natural para cuidado personal empatizando con el medio ambiente.">
-    <meta name="keywords" content="COSMÉTICA, NATURAL, ORIGEN VEGETAL, MEDIO AMBIENTE.">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="diseno.css">
-    <link rel="icon" href="../secciones/logo sustenta.ico">
-    <!--Tipografías-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
-</head>
+  <html lang="es">
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device=width, initial-scale=1.0">
+      <title>Sustenta Tienda</title>
+      <meta name="description" content="En este sitio encontrarás productos cosméticos de origen natural para el cuidado personal y del medio ambiente.">
+      <meta name="keywords" content="NATURAL, VEGANO, CRUELTY FREE, MEDIO AMBIENTE">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+      <link rel="stylesheet" href="diseno.css">
+      <link rel="icon" href="logo sustenta.ico">
+      <!--Tipografías-->
+      <link rel ="preconnect" href ="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;700&display=swap" rel="stylesheet">
+    </head>
 
 <!-- Header -->
 
-<header class="navbar navbar-expand-lg navbar-light">
+<header class="header navbar navbar-expand-lg navbar-light">
   <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-        <img src="../secciones/Imagenes/logo sustenta.png" alt="logo" style="width: 150px;">
-      </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
-          <li><a class="dropdown-item centrar" href="Productos.html">Facial</a></li>
-          <li><a class="dropdown-item centrar" href="Productos.html">Corporal</a></li>
-          <li><a class="dropdown-item centrar" href="Productos.html">Capilar</a></li>
-          <li><a class="dropdown-item centrar" href="Productos.html">Bucal</a></li>
-              </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Información.html">Información</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Contacto.html">Contacto</a>
-          </li>
-        </ul>
-        </div>
+    <a class="navbar-brand" href="index.html">
+    <img src="Imagenes/logo sustenta.png" alt="logo" style="width: 150px;">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+        <a class="nav-link" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="Productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
+          <ul class="dropdown-menu centrar" aria-labelledby="navbarDropdownMenuLink" style="background-color: transparent;">
+            <li><a class="dropdown-item" href="Productos.html">Facial</a></li>
+            <li><a class="dropdown-item" href="Productos.html">Corporal</a></li>
+            <li><a class="dropdown-item" href="Productos.html">Capilar</a></li>
+            <li><a class="dropdown-item" href="Productos.html">Bucal</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Información.html">Información</a>
+        </li>
+        <li class="nav-item">
+        <a class="nav-link" href="Contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="d-flex flex-row-reverse bd-highlight">
-    <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
+    <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(Imagenes/carrito\ de\ compras.svg); height: 30px;"></button></div> 
   </div>
-</header> 
+</header>
 
 <body>
 
@@ -74,10 +74,10 @@
 
 <div class="newsletter">
   <label for="exampleFormControlInput1" class="titulo textgreen"><h3>Suscribite a nuestro Newsletter</h3></label>
-  <div class="mb-3 inNews">
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
-    <button type="button" class="btn btn-outline-secondary">Enviar</button>
-  </div>
+    <div class="mb-3 inNews">
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@email.com">
+      <button type="button" class="btn btn-outline-secondary">Enviar</button>
+    </div>
 </div>
 
 
@@ -85,20 +85,17 @@
 
 <footer class="row m-0 container-fluid footer" style="justify-content: space-around;">
   <div class="col-md-2 logo-footer">
-    <img src="../secciones/Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
+    <img src="Imagenes/logo sustenta.png" style="width: 150px;" alt="logo">
   </div>
 
   <div class="col-md-2">
       <h5 class="textgrey">Redes sociales</h5>
     <a href="https://www.facebook.com/"><div class="d-flex flex-row-reverse bd-highlight">
-      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/facebook\ \(1\).png); height: 35px;"></button></a><h6>/sustentatienda</h6>
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(Imagenes/facebook\ \(1\).png); height: 35px;"></button></a><h6>/sustentatienda</h6>
     <a href="https://www.instagram.com/"><div class="d-flex flex-row-reverse bd-highlight">
-      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(../secciones/Imagenes/instagram\ \(1\).png); height: 35px;"></button></a><h6>@sustenta.tienda</h6>
+      <div class="p-2 bd-highlight"><button type="button" class="btn btn-secondary btn-lg" style="background-image: url(Imagenes/instagram\ \(1\).png); height: 35px;"></button></a><h6>@sustenta.tienda</h6>
   </div>
 </footer>
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
